manifests/http-playground/party-clippy-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: http-playground
  name: party-clippy
  annotations:
    fluxcd.io/automated: 'true'
spec:
  selector:
    matchLabels:
      app: party-clippy
  template:
    metadata:
      labels:
        app: party-clippy
    spec:
      containers:
      - image: r.j3ss.co/party-clippy
        name: party-clippy
        tty: true
        command: ["party-clippy"]
        ports:
        - containerPort: 8080
