manifests/http-playground/echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: http-playground
  name: http-echo
  labels:
    service: http-echo
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    service: http-echo
