manifests/http-playground/party-clippy-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: http-playground
  name: party-clippy
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: party-clippy
  type: ClusterIP
